# lwnode

./: common.gypi  configure.py  escargotshim.gyp  message-port.gyp
.github/workflows/: actions.yml
include/lwnode/: lwnode-public.h  lwnode.h  message-port.h  nd-vm-message-channel.h  uv-loop-holder.h
packaging/: lwnode.spec
src/api/: stack-trace.h
src/api/utils/logger/: logger-util.h
src/lwnode/: lwnode-public.cc  lwnode.cc  nd-mod-base.cc  nd-mod-base.h  nd-mod-message-port.cc  nd-vm-message-channel.cc
test/cctest/: test-internal.cc
test/embedding/: CMakeLists.txt  embedtest.cc  example.cc  mytest.h  test-01-message-port-basic.js  test-02-message-port-many.js
tools/: build-embedtest.sh  make-hard-link-message-port.sh
